2012-07-09  Serg Stoyan  <stoyan255@ukr.net>

	* Framework/PCProjectInspector.m: (-removeAuthor): Improve selection 
	of author list items after item deletion. Inspired by bug #25571. 
	Bug should be closed.

2012-06-12 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectWindow.m
	Use centerScanRect to avoid strange problems with AA text in editor.

	* Headers/PCAppController.h
	* PCAppController.m
	Update applicationShouldTerminate signature.

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.m
	NetBSD doesn't support streams either.

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.m
	Fix imports and includes for FreeBSD

2011-09-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCAddFilesPanel.m [-setFileTypes]:
	use setAllowedFileTypes method instead of private method which was removed

2011-04-28 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileManager.m:
	Correct cast according to ctypes caveats.

2011-04-07 Riccardo Mottola <rm@gnu.org>

	* Headers/ProjectCenter/PCDefines.h
	Change ifdef to detect non-gnustep.

	* Framework/PCProjectInspector.m
	Warning fix.

	* Modules/Preferences/Misc/PCMiscPrefs.m
	Remove extra parentheses which confuse = and == warning.

2011-04-06  Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Parsers/ProjectCenter/PCParser.m [-parse]: Move the
	selector and IMP definitions inside the method. Global IMP caching
	is always wrong! And this broke compilation with llvm.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	([PCResourceSetProject -appendHead:]): Added FIXME.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m (-revertFileToSaved):
	Ask for confirmation before reverting.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditorView.m (-performIndentation):